--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ $ git checkout gh-pages
 <p>Having trouble with Pages? Check out the documentation at <a href="https://help.github.com/pages">https://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
 
 <h2>
-<link href='http://dalanw.github.io/arcade-game/'>Frogger Clone</h2>
+<link href='http://dalanw.github.io/arcade-game/'>"Frogger Clone"</h2>
 
       <footer class="site-footer">
 
