--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@ $ git checkout gh-pages
 
 <p>Having trouble with Pages? Check out the documentation at <a href="https://help.github.com/pages">https://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p> -->
 
+<h2>Resume</h2>
+<p>Please click <a href='http://dalanw.github.io/resume/'>here</a> to view my resume.</p>
+
 <h2>Frogger Clone</h2>
 <p>Please click <a href='http://dalanw.github.io/arcade-game/'>here</a> to play a Frogger game clone.</p>
 
