Add design-mockup link to README.md and index.html; correct link in design-mockup/README.md

--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@ $ git checkout gh-pages
 <h2>Resume</h2>
 <p>Please click <a href='http://dalanw.github.io/resume/'>here</a> to view my resume.</p>
 
+<h2>Design-Mockup</h2>
+<p>Please click <a href='http://dalanw.github.io/design-mockup/'>here</a> to view this project.</p>
+
 <h2>Frogger Clone</h2>
 <p>Please click <a href='http://dalanw.github.io/arcade-game/'>here</a> to play a Frogger game clone.</p>
 
